--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "amazon-product-api": "^0.4.4",
     "cors": "^2.8.5",
+    "node": "10.16.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "lodash": "^4.17.4",
